support profile image as base64 data
